--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "fastify": "^4.23.2",
+    "fastify-cors": "^6.1.0",
     "postgres": "^3.3.5"
   },
   "devDependencies": {
