--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^7.0.0",
     "fastify": "^4.23.2",
-    "fastify-cors": "^6.1.0",
     "postgres": "^3.3.5"
   },
   "devDependencies": {
