--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "node --watch --no-warnings server.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +24,7 @@
     "postgres": "^3.3.5"
   },
   "devDependencies": {
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "nodemon": "^3.1.0"
   }
 }
