--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fastify/cors": "^7.0.0",
+    "@fastify/cors": "^9.0.1",
+    "@fastify/formbody": "^7.4.0",
+    "@google/generative-ai": "^0.12.0",
+    "axios": "^1.7.2",
     "docxtemplater": "^3.43.1",
-    "fastify": "^3.29.5",
+    "fastify": "^4.27.0",
     "fs": "^0.0.1-security",
     "jszip": "^2.6.1",
     "officegen": "^0.6.5",
